# ShearNet

./: .flake8  .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  ShearNet_1599167.out  ShearNet_1618288.err  ShearNet_1618288.out  ShearNet_1641250.err  ShearNet_1641250.out  ShearNet_1641346.err  ShearNet_1641346.out  ShearNet_1641350.err  ShearNet_1641350.out  ShearNet_1647777.out  ShearNet_1647982.err  ShearNet_1647982.out  diff_of_config.txt  makefile  post_installation.py  pyproject.toml  setup.py  shearnetreorg.bundle  sn2025_cpu.yml  sub.sh  submission.sh  unit_tests.mk
configs/: cnn6_experiment.yaml  deconv.yaml  deconv_dry_run.yaml  deconvnet.yaml  deconvnet_dry_run.yaml  dry_run.yaml  example.yaml  first_validation_test.yaml  fork-like.yaml  research_backed_deconv.yaml  research_resnet.yaml  second_validation_test.yaml
environments/: requirements.txt  sn2025_gpu.yml  sn2026_gpu.yml
forklens/: README.md
notebooks/: 01_quickstart.ipynb  02_model_comparison.ipynb  03_catalog_builder.ipynb  04_psf_diagnostics.ipynb  README.md  catalog_split.ipynb  comparison.ipynb  cosmos_g1g2_comparison.ipynb  datagen.ipynb  debug_third.ipynb  debug_validation_tests.ipynb  deconvnet_comparison.ipynb  detection_catalog_split.ipynb  example.ipynb  fits_analysis.ipynb  flux_visualization.ipynb  galsim_deconv.ipynb  learning_curve.ipynb  multi_comparison.ipynb  multiplicative_bias_debug.ipynb  normalization_test.ipynb  read_table.ipynb  sbpsf_analysis.ipynb
research/: README.md
scripts/: generate_wiki.py  post_installation.py
shear_bias/: helpers_ngmix_mcal.py  main.py  ngmix_shear_bias.py  notebook.ipynb  plots_from_fits.ipynb  run_mcal.sh  submit.sh
shear_bias_debug/: MoM_fitter.ipynb  bias_debug.ipynb  catalog_debug.ipynb  dataset_gen_debug.ipynb  shear_bias.py
shear_bias_with_sn/: config.yaml  notebook.ipynb  (+5 more)
(+522 files in other folders)
